--- a/estilo_escolha.css
+++ b/estilo_escolha.css
@@ -18,7 +18,7 @@ body
 {
 
    
-    border-color: brown;
+   /* border-color: brown;*/
     border-width: 5px;
     width: 100%;
     height: 99vh;
