--- a/estilo_index.css
+++ b/estilo_index.css
@@ -11,7 +11,7 @@ body
 .principal
 {
     border-style: solid;
-    border-color: brown;
+   /* border-color: brown;*/
     border-width: 5px;
     width: 99%;
     height: 99vh;
