--- a/estilo_pagamento.css
+++ b/estilo_pagamento.css
@@ -14,7 +14,7 @@ body
 }
 .principal
 {
-    border-color: brown;
+    /*border-color: brown;*/
     border-width: 5px;
     width: 100%;
     height: 99vh;
