--- a/estilo_adm.css
+++ b/estilo_adm.css
@@ -34,17 +34,7 @@ body
     align-content: center;
     align-items: center; 
 }
-.bordacad
-{
-    width: 80%;
-    height: 45vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-}
+
 .letrascadastro
 {
     font-size: 40px;
@@ -53,8 +43,8 @@ body
 .dPessoais
 {
     background: rgba(239, 244, 246, 0.7);
-    width: 30%;
-    height: 97vh;
+    width: 25%;
+    height: 67vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -62,6 +52,9 @@ body
     align-content: center;
     align-items: center; 
     border-radius: 40px;
+    margin-left: -270px;
+    
+    margin-top:-180px ;
 }
 .letraspessoais
 {
@@ -72,8 +65,8 @@ body
 .dProfissionais
 {
     background: rgba(239, 244, 246, 0.7);
-    width: 30%;
-    height: 97vh;
+    width: 25%;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -81,11 +74,11 @@ body
     align-content: center;
     align-items: center; 
     border-radius: 40px;
+    margin-top: 0px;
+    margin-left: -80px;
+   
 }
-.logo
-{
-    top: 40px;
-}
+
 .fieldset1
 {
     width: 250px;
@@ -115,28 +108,16 @@ body
 .fieldset3
 {
     width: 80%;
-    height: 60px;
+    height: 90px;
     display: flex;
     justify-content:center;
     justify-items: center;
     align-content: center;
     align-items: center; 
-    border-radius: 5px;
+    border-radius: 15px;
      
 }
-.botao
-{
-   width: 180px;
-   height: 60px;
-   background-color: rgb(53, 120, 141);
-   display: flex;
-   border-radius: 20px;
-   justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-   
-}
+
 input
 {
     width: 100%;
@@ -145,4 +126,124 @@ input
 a{
     text-decoration: none;
     color:white;
+}
+.botoes
+{
+    background: rgba(239, 244, 246, 0.7);
+    z-index: 70;
+    position: absolute;
+    width: 90px;
+    height: 700px;
+    left:1500px;
+    top:50px;
+    border-radius: 10px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-self: center;
+    
+
+}
+.botao1
+{
+    background-color: aliceblue;
+    border-radius: 40px;
+    width: 70px;
+    height: 70px;
+    margin-left:10px;
+    margin-top: 20px;
+    background-color: rgb(53, 120, 141);
+}
+
+.botao2
+{
+    background-color: aliceblue;
+    border-radius: 40px;
+    width: 70px;
+    height: 70px;
+    margin-left:10px;
+    margin-top: 100px;
+    background-color: rgb(53, 120, 141);
+}
+
+.botao3
+{
+    background-color: aliceblue;
+    border-radius: 40px;
+    width: 70px;
+    height: 70px;
+    margin-left:10px;
+    margin-top:100px;
+    background-color: rgb(53, 120, 141);
+}
+.botao4
+{
+    background-color: aliceblue;
+    border-radius: 40px;
+    width: 70px;
+    height: 70px;
+    margin-left:10px;
+    margin-top: 130px;
+    background-color: rgb(53, 120, 141);
+}
+.lupa
+{
+    margin-left:9px;
+    margin-top: 10px;
+}
+.lixeira
+{
+    margin-top: 10px;
+    width: 50px;
+    margin-left:10px; 
+}
+.inserir
+{
+    margin-top: 0px;
+    width: 70px;
+    margin-left:0px;  
+}
+.alterar
+{
+    margin-top: 10px;
+    width: 50px;
+    margin-left:10px;  
+}
+.caixadetexto
+{
+    background: rgba(239, 244, 246, 0.7);
+    width: 400px;
+    height: 700px;
+    margin-left: -180px;
+    border-radius: 20px;
+    border-color:rgba(53, 120, 141, 0.567);
+    border-style: solid;
+    margin-top:0px;
+
+}
+.logo
+{
+    margin-top:50px;
+    margin-left: 120px;
+}
+.texto
+{
+   font-size:25px ;
+   margin-left:40px;
+   margin-top: 30px;
+}
+.texto2
+{
+   font-size:15px ;
+   margin-left:30px;
+   margin-top: 30px;
+}
+.logoescrita
+{
+    font-family: 'Dancing Script', cursive;
+    position: absolute;
+    top: 690px;
+    left:1200px; 
+    z-index: 10;
+    font-size: 30px;
 }
