--- a/estilo_escolha.css
+++ b/estilo_escolha.css
@@ -39,28 +39,29 @@ body
 }
 .D3
 {
-    /*background-color: brown;*/
+   
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 170px;
-    top:9px;
+    width: 60px;
+    height: 60px;
+    left: 190px;
+    top:10px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    justify-items: center;
     align-items: center;
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:11;
 
 }
 .D4
 {
     /*background-color: yellow;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 300px;
+    width: 60px;
+    height: 60px;
+    left: 590px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -69,14 +70,16 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
+    
 }
 .D5
 {
     /*background-color: pink;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 430px;
+    width: 60px;
+    height: 60px;
+    left: 320px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -85,14 +88,15 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
 }
 .D6
 {
     /*background-color: purple;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 530px;
+    width: 60px;
+    height: 60px;
+    left: 460px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -101,48 +105,53 @@ body
     align-content: center;
     cursor: pointer;
     border-radius: 40px;
+    z-index:10;
 }
 .D7
 {
-    /*background-color: purple;*/
-    position: absolute;
-    width: 10%;
-    height: 8vh;
-    left: 900px;
-    top:15px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    cursor: pointer;
-    color: white;
+     /*background-color: purple;*/
+     position: absolute;
+     width: 150px;
+     height: 60px;
+     left: 1200px;
+     top:15px;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-around;
+     align-items: center;
+     align-content: center;
+     cursor: pointer;
+     color: white;
+     margin-left: 5px;
+     z-index:10;
     
 }
 .D8
 {
    /* background-color: yellow;*/
-    position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 1090px;
-    top:9px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    cursor: pointer;
-    border-radius: 40px;
-    color:white;
+   position: absolute;
+   width: 60px;
+   height: 60px;
+   left: 1350px;
+   top:9px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   align-content: center;
+   cursor: pointer;
+   border-radius: 60px;
+   color:white;
+   margin-left: 28px;
+   z-index:10;
 }
 .D9
 {
     /*background-color: yellow;*/
     position: absolute;
-    width: 5%;
-    height: 9vh;
-    left: 1250px;
+    width: 60px;
+    height: 60px;
+    left: 1500px;
     top:9px;
     display: flex;
     flex-direction: row;
@@ -152,25 +161,13 @@ body
     justify-items: center;
     cursor: pointer;
     border-radius: 40px;
-}
-.D10
-{
-    
-    position: relative;
-    top: 0px;
-    left:0px; 
-    width: 100%;
-    height: 30vh;
-    flex-direction: column;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    
+    z-index:10;
 }
 .D12
 {
-    width: 110%;
-    height: 10vh;
+   
+    width: 100%;
+    height: 82px;
     background-color: rgb(44, 119, 119);
     display: flex;
     flex-direction: row;
@@ -178,41 +175,42 @@ body
     align-items: center;
     align-content: center;
     justify-items: center;
+    top:0px;
+    
 }
+
 
 .D3:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D4:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D5:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D6:hover
-{
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+{ 
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D8:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D9:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D2:hover
 {
-    background-image: radial-gradient(rgb(220, 34, 62), rgba(44, 119, 119, 0.617) );
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D13
