--- a/estilo_pagamento.css
+++ b/estilo_pagamento.css
@@ -1,7 +1,7 @@
 body
 {
     font-family: "Audiowide", sans-serif;
-    background-image: url("fundo4.jpg");
+    background-image: url("img/fundo4.jpg");
     overflow: hidden;
     margin: 0;
     padding: 0%;
@@ -189,37 +189,35 @@ body
 
 .D3:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D4:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D5:hover
 {
-    background-color: black;
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D6:hover
-{
-    background-color: black;
+{ 
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D8:hover
 {
-    background-color: black; 
-
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 }
 .D9:hover
 {
-    background-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D2:hover
 {
-    border-color: black;
+    background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617));
 
 }
 .D13
@@ -330,9 +328,9 @@ a
 
 .preco
 {
-    top: 213px;
-    width:10px;
-    height: 70px;
+    top: 235px;
+    width:240px;
+    height: 90px;
     background-color: rgba(0, 0, 0, 0.562);
     display: flex;
     justify-content: space-around;
@@ -341,7 +339,7 @@ a
      align-items: center; 
      flex-direction: column;
     color:white;
-    position: absolute;
+    position: relative;
     bottom: 0px;
 }
 .botaodeslizar
