--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -15,7 +15,7 @@ body
 .d1
 {
    
-    width: 100%;
+    width: 190%;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -27,9 +27,10 @@ body
 .cadastro
 {
 
-    width: 30%;
+    width: 70%;
     height: 97vh;
     display: flex;
+    margin-left: -500px;
     flex-direction: column;
     align-content: center;
     align-items: center; 
@@ -53,7 +54,7 @@ body
 .dPessoais
 {
     background: rgba(239, 244, 246, 0.7);
-    width: 30%;
+    width: 70%;
     height: 97vh;
     display: flex;
     flex-direction: column;
@@ -72,9 +73,10 @@ body
 .dProfissionais
 {
     background: rgba(239, 244, 246, 0.7);
-    width: 30%;
+    width: 70%;
     height: 97vh;
     display: flex;
+    margin-left: 50px;
     flex-direction: column;
     justify-content: space-around;
     justify-items: center;
