--- a/css/estilo_inicial.css
+++ b/css/estilo_inicial.css
@@ -1243,4 +1243,14 @@ html, body {
       margin-top:0px;
       flex-direction: row;
   }
-  
+  .botaoavaliacao
+{
+    background-color: rgb(45, 128, 127);
+    width: 100px;
+    height: 40px;
+    margin-top:-150px;
+    position: absolute;
+    border-radius: 10px;
+    font-size: 15px;
+    color:white
+}
