--- a/css/estilo_login.css
+++ b/css/estilo_login.css
@@ -53,7 +53,7 @@ body
 }
 .D3
 {
-    width: 95%;
+    width: 150%;
     height: 10vh;
     flex-direction: row;
     display: flex;
@@ -61,15 +61,19 @@ body
     justify-items: center;
     align-content: center;
     align-items: center;
+    color:white
+    
 }
 .botao
 {
     background-color: rgb(45, 128, 127);
-    width: 180px;
+    width: 150px;
     height: 40px;
     border-radius: 10px;
     font-size: 15px;
+    color:white
 }
+
 a
 {
     text-decoration: none;
