--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -148,3 +148,12 @@ a{
     text-decoration: none;
     color:white;
 }
+.botao
+{
+    background-color: rgb(45, 128, 127);
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 15px;
+    color:white
+}
