--- a/css/estilo_login.css
+++ b/css/estilo_login.css
@@ -53,7 +53,7 @@ body
 }
 .D3
 {
-    width: 150%;
+    width: 110%;
     height: 10vh;
     flex-direction: row;
     display: flex;
@@ -61,7 +61,9 @@ body
     justify-items: center;
     align-content: center;
     align-items: center;
-    color:white
+    color:white;
+    margin-left: -10px;
+    
     
 }
 .botao
@@ -69,9 +71,9 @@ body
     background-color: rgb(45, 128, 127);
     width: 150px;
     height: 40px;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 15px;
-    color:white
+    color:white;
 }
 
 a
