--- a/css/estilo_inicial.css
+++ b/css/estilo_inicial.css
@@ -1253,7 +1253,8 @@ html, body {
     background-color: rgb(45, 128, 127);
     width: 100px;
     height: 40px;
-    margin-top:-150px;
+    margin-top:100px;
+    margin-left:100px;
     position: absolute;
     border-radius: 10px;
     font-size: 15px;
