--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -100,7 +100,7 @@ body
     border-radius: 20px;
     flex-direction: column;
     border-style: solid;
-    border-color: black;
+    border-color: transparent;
      
 }
 .fieldset2
@@ -113,6 +113,7 @@ body
     align-content: center;
     align-items: center; 
     border-radius: 20px;  
+    border-color: transparent;
 }
 .fieldset3
 {
@@ -124,6 +125,7 @@ body
     align-content: center;
     align-items: center; 
     border-radius: 5px;
+    border-color: transparent;
      
 }
 .botao
