--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -1,161 +1,194 @@
 body
-{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
-    background-image: url("../img/fundo4.jpg");
-    overflow: hidden;
-    font-family: "Audiowide", sans-serif;
-}
-.d1
-{
-   
-    width: 190%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center;  
-}
-.cadastro
-{
+        {
+            font-family: "Audiowide", sans-serif;
+            background-image: url("../img/fundo4.jpg");
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            justify-items: center;
+            align-content: center;
+            align-items: center;
+            overflow: hidden;
+            
+        }
+        .d1
+        {
+           
+            width: 900%;
+            height: 90vh;
+            display: flex;
+            margin-left: -650px;
+            flex-direction: row;
+            justify-content: space-around;
+            justify-items: center;
+            align-content: center;
+            align-items: center;  
+        }
+        .cadastro
+        {
 
-    width: 70%;
-    height: 97vh;
-    display: flex;
-    margin-left: -500px;
-    flex-direction: column;
-    align-content: center;
-    align-items: center; 
-}
-.bordacad
-{
-    width: 80%;
-    height: 45vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-}
-.letrascadastro
-{
-    font-size: 40px;
-}
+            width: 30%;
+            height: 97vh;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center; 
+        }
+        .bordacad
+        {
+            width: 80%;
+            height: 35vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+        }
+        .letrascadastro
+        {
+            font-size: 30px;
+        }
 
-.dPessoais
-{
-    background: rgba(239, 244, 246, 0.7);
-    width: 70%;
-    height: 97vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    border-radius: 40px;
-}
-.letraspessoais
-{
-    font-size: 25px;
-    color: rgb(53, 120, 141);
-}
+        .dPessoais
+        {
+            background:rgba(255, 255, 255, 0.7);
+            width: 30%;
+            height: 80vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+            border-radius: 40px;
+            border-color: rgb(0, 0, 0);
+            border-width: 1px;
+            border-style: solid;
+        }
+        .letraspessoais
+        {
+            font-size: 20px;
+            color: rgb(45, 128, 127);
+        }
 
-.dProfissionais
-{
-    background: rgba(239, 244, 246, 0.7);
-    width: 70%;
-    height: 97vh;
-    display: flex;
-    margin-left: 50px;
-    flex-direction: column;
-    justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    border-radius: 40px;
-}
-.logo
-{
-    top: 40px;
-}
-.fieldset1
-{
-    width: 250px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    border-radius: 20px;
-    flex-direction: column;
-    border-style: solid;
-    border-color: transparent;
-     
-}
-.fieldset2
-{
-    width: 80%;
-    height: 90px;
-    display: flex;
-    justify-content:center;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    border-radius: 20px;  
-    border-color: transparent;
-}
-.fieldset3
-{
-    width: 80%;
-    height: 60px;
-    display: flex;
-    justify-content:center;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-    border-radius: 5px;
-    border-color: transparent;
-     
-}
-.botao
-{
-   width: 180px;
-   height: 60px;
-   background-color: rgb(53, 120, 141);
-   display: flex;
-   border-radius: 20px;
-   justify-content: space-around;
-    justify-items: center;
-    align-content: center;
-    align-items: center; 
-   
-}
-input
-{
-    width: 100%;
-    margin-top: 20px;
-}
-a{
-    text-decoration: none;
-    color:white;
-}
-.botao
-{
-    background-color: rgb(45, 128, 127);
-    width: 150px;
-    height: 40px;
-    border-radius: 10px;
-    font-size: 15px;
-    color:white
-}
+        .dProfissionais
+        {
+            background:rgba(255, 255, 255, 0.7);
+            width: 30%;
+            height: 80vh;
+            display: flex;
+            margin-left: 20px;
+            flex-direction: column;
+            justify-content: space-around;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+            border-radius: 40px;
+            border-color: rgb(0, 0, 0);
+            border-width: 1px;
+            border-style: solid;
+        }
+        .logo
+        {
+            top: 40px;
+            width: 35%;
+            height: 25vh;
+        }
+        .fieldset1
+        {
+            width: 250px;
+            height: 80px;
+            display: flex;
+            justify-content: center;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+            border-radius: 20px;
+            flex-direction: column;
+            border-style: solid;
+            border-color: black;
+            border-color: transparent;
+             
+        } 
+        .fieldset2
+        {
+            width: 80%;
+            height: 90px;
+            display: flex;
+            justify-content:center;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+            border-radius: 20px; 
+            border-color: transparent; 
+            color: rgb(45, 128, 127);
+        }
+        .fieldset3
+        {
+            width: 80%;
+            height: 60px;
+            display: flex;
+            justify-content:center;
+            justify-items: center;
+            align-content: center;
+            align-items: center; 
+            border-radius: 5px;
+            border-color: transparent;   
+            color: rgb(45, 128, 127);
+        }
+        .botao
+        {
+        background-color: rgb(45, 128, 127);
+        width: 180px;
+        height: 50px;
+        border-radius: 10px;
+        font-size: 15px;
+        display: flex;
+        justify-content:center;
+        justify-items: center;
+        align-content: center;
+        align-items: center;
+        border-color: white;
+        border-style: solid;
+        border-width: 2px;
+        }
+        a
+        {
+            text-decoration: none;
+            color: white;
+        }
+
+        input
+        {
+            width: 100%;
+            margin-top: 20px;
+        }
+        .caixa
+        {
+            width: 100%;
+            height: 4vh;
+            border-color:rgb(0, 0, 0);
+            border-style: solid;
+            border-radius: 5px;
+        }
+        .caixa2
+        {
+            width: 100%;
+            height: 4vh;
+            border-color:rgb(0, 0, 0);
+            border-style: solid;
+            border-radius: 5px;
+            border-width: 1px;
+        }  
+        .caixa3
+        {
+            width: 100%;
+            height: 3vh;
+            border-color:rgb(0, 0, 0);
+            border-style: solid;
+            border-radius: 5px;
+            border-width: 1px;
+        }       
