--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -31,6 +31,7 @@ body
 
             width: 30%;
             height: 97vh;
+            margin-left: -25px;
             display: flex;
             flex-direction: column;
             align-content: center;
@@ -154,6 +155,7 @@ body
         border-color: white;
         border-style: solid;
         border-width: 2px;
+        cursor: pointer;
         }
         a
         {
@@ -191,4 +193,15 @@ body
             border-style: solid;
             border-radius: 5px;
             border-width: 1px;
-        }       
+        }   
+        .certo
+    {
+        background-color: rgb(189, 238, 189);
+        color: rgb(22, 107, 36);
+    }
+
+    .errado
+    {
+        background-color: rgba(124, 9, 9, 0.856);
+        color: white;
+    }    
